[package]
name = "todo-backend"
version = "0.1.0"
authors = ["Osh <osh.pro@outlook.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"
serde_json = "1.0.59"
serde = "1.0.125"
random-number = "0.1.6"
actix-cors = "0.5.4"